--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,3 +56,20 @@
   background-color:  #0967C2; /* Darker shade of primary color on hover */
   transform: scale(1.05); /* Slight scale effect for hover */
 }
+
+
+/* globals.css */
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animate-fade-in {
+  animation: fade-in 0.3s ease-out forwards;
+}
